# diy-stream-deck

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile.test  GitVersion.yml  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml  security.yml
.github/instructions/: platform.instructions.md  python_guidelines.instructions.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependencies.yml  enforce-feature-branch.yml  labeler.yml  pages.yml  quality-gate-check.yml  release.yml  secret-scan.yml  sonar.yml
.gitnexus/: meta.json
diy_stream_deck/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
