[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project]
name = "diy-stream-deck"
version = "0.1.0"
description = "DIY Stream Deck alternative compatible with Linux and Windows"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "pynput>=1.8.1",
]

[project.optional-dependencies]
linux = [
    "evdev>=1.9.3",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "pre-commit>=4.5.1",
]

[project.scripts]
diy-stream-deck = "diy_stream_deck.__main__:main"
