[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=diy_stream_deck --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["diy_stream_deck"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[project]
name = "diy-stream-deck"
version = "0.1.0"
description = "DIY Stream Deck alternative compatible with Linux and Windows"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.32",
    "pynput>=1.7",
]

[project.optional-dependencies]
linux = [
    "evdev>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[project.scripts]
diy-stream-deck = "diy_stream_deck.__main__:main"
